{
    "name": "InputActions",
    "maps": [
        {
            "name": "GameControls",
            "id": "d12b47cb-9ab5-4b0a-a37b-7d10f950ab45",
            "actions": [
                {
                    "name": "1st Tone",
                    "type": "Button",
                    "id": "d0fd65b0-b299-4337-8147-bd1bb4c543b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "2nd Tone",
                    "type": "Button",
                    "id": "1b94cdb0-5f13-48ff-a1ca-262562091483",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "3rd Tone",
                    "type": "Button",
                    "id": "c514713b-600e-415f-b2cc-59733751f1f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "4th Tone",
                    "type": "Button",
                    "id": "1d014d0d-43ca-46e8-9fbe-0c12e47ef88b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "5th Tone",
                    "type": "Button",
                    "id": "26f0d1e5-bc9a-43d0-8d2e-5fd19dea4417",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "6th Tone",
                    "type": "Button",
                    "id": "86ed421d-ed6e-4244-a57b-385211e3f352",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "7th Tone",
                    "type": "Button",
                    "id": "226ec84f-9d85-49cf-90a5-047bb205d68f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AdvanceRecordingPhase",
                    "type": "Button",
                    "id": "de8c429f-74ad-444f-a335-cc26486b7a64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UndoRecording",
                    "type": "Button",
                    "id": "4e86774f-b15e-48e5-a1d0-5a420b56431b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextInstrument",
                    "type": "Button",
                    "id": "00db23b2-5df3-4472-b2ca-c37ee2403c41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaySong",
                    "type": "Button",
                    "id": "d0141721-bd8d-46c6-9855-0f95e24852ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3cc00fa-c999-4940-a432-981ba7e4374e",
                    "path": "<Keyboard>/1",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "1st Tone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dec950e3-aa70-4ef5-9a16-9f570fe7dc35",
                    "path": "<Keyboard>/2",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "2nd Tone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0841f5b3-d7c3-4a94-bcaa-ed8a207e68db",
                    "path": "<Keyboard>/3",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "3rd Tone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0ba60da-ee23-4e98-b119-31d41b974663",
                    "path": "<Keyboard>/4",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "4th Tone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc002f55-e040-418e-88f5-10aaf448fe9c",
                    "path": "<Keyboard>/5",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "5th Tone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91020016-6367-4c26-8fce-dd489832f588",
                    "path": "<Keyboard>/6",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "6th Tone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c0040ff-5727-4202-a77e-ca1ba90aa826",
                    "path": "<Keyboard>/7",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "7th Tone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5631747d-b7fd-4647-bb0a-d8745c999223",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AdvanceRecordingPhase",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76138cd4-c78d-4741-998a-71364278bacb",
                    "path": "<Keyboard>/backspace",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UndoRecording",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59114d69-2d56-43b8-bc66-55f91e549777",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "NextInstrument",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cc1016e-2f66-460b-9773-a584dd257e35",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaySong",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WalkControls",
            "id": "afec8d31-d6de-4631-a465-ee0b4773acaa",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "063c821f-09c1-40c8-b6fe-875118de8c70",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InitiateTalk",
                    "type": "Button",
                    "id": "c0c25886-01d8-4b61-87b9-2ff6d905a0ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9d13f0e9-c654-47a0-b660-a71cda19d263",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "01a460d6-9335-479a-9898-1b3ad7d250b4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1833c0fb-05c1-4fb5-9918-93450713f7ca",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "13a6ff8d-b331-4e60-921f-7ae3991d4c27",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c8d6810c-b87a-451b-9583-148f0f1046f6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9fd6446b-0c35-46fa-b0db-8bc39fda6f99",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InitiateTalk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}